Added Pixel art

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -3,9 +3,9 @@ loaderVersion="[28,)"
 
 [[mods]]
 modId="instantbuidlings"
-version="1.0.0"
+version="1.0.1"
 displayName="InstantBuidlings"
-credits="Created using mod maker MCreator - https://mcreator.net/about"
+credits="chivas477"
 displayURL="https://mcreator.net"
 authors="chivas477"
 
